Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-97482

Android: QPushButton with QMenu does not work on Qt6

XMLWordPrintable

    • Android
    • dbb072eb2 (dev), a4ca9e806 (dev), 4e9eb6bd6 (6.5), c5986c9e5 (6.6), 1781eb50a (6.6), e307f57e9 (tqtc/lts-6.2), 9a39ad8df (dev), f91588923 (dev), fa2a7b256 (dev), 8a02a3584 (6.6), c6e268655 (tqtc/lts-6.2), 95291e4a8 (6.6), 86fe84f5f (dev), 849409e0d (6.5)
    • 2021wk44POAndroid&Mobile, 2021wk46POAndroid&Mobile, 2021wk48POAndroid&Mobile, 2022wk02FOAndroid&Automotive, 2022wk04FOAndroid&Automotive, 2022wk06FOAndroid&Automotive, 2022wk08FOAndroid&Automotive, 2022wk10FOAndroid&Automotive, 2023wk18FOQtforAndroid

      QMenu of QPushButton opens only once.

      Reproduced on Nokia 6.1(A10) and OnePlus 7(A11).
      Builded arm64-v8a.

      See video

      Qmenu works on Qt5.15.6

        1. Qt5.mp4
          1.06 MB
          Pekka Gehör
        2. Qt6.mp4
          921 kB
          Pekka Gehör
        3. PushButtonMenuTest.zip
          7 kB
          Pekka Gehör
        4. PushButtonMenuTestWithDialog.zip
          3 kB
          Pekka Gehör
        5. QTBUG-97482.tgz
          9 kB
          Axel Spoerl
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            axelspoerl Axel Spoerl
            pekkagehor Pekka Gehör
            Votes:
            5 Vote for this issue
            Watchers:
            14 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes