Android: hide() in the QAndroidPlatformMessageDialogHelper destructor

The native dialog window is not being hidden or destroyed when the
QAndroidPlatformMessageDialogHelper object is destroyed. This makes
sure to not leave any native dialogs open.

Task-number: QTBUG-97482
Fixes: QTBUG-101758
Change-Id: I2e50caebd286ea6abd3e948a4873dc3c971626a4
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>
(cherry picked from commit a7801fa3255ab5a1b73b51fa9f4090571885712f)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>